fixed scrolling and overflow in login form

--- a/src/index.css
+++ b/src/index.css
@@ -549,6 +549,10 @@
   border: 1px solid var(--homeLabelColor);
 }
 
+.login-form-container::-webkit-scrollbar{
+  display: none;
+}
+
 .profileMainEditButton:hover {
   background-color: var(--buttonHover);
 }
